Implemented API 2. Added error 401 to swagger. Added mock test cases. Added MOCK SERVER params to application.properties